k8s/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
spec: 
  # number of pods for this deployment to manage
  replicas: 1 
  # select all pods with the name auth-server 
  selector:
    matchLabels:
      component: auth-server 

  template: 
    metadata:
      labels:
        component: auth-server # label for each pod that is created

    # customize behaviour of each pod that is created
    spec:
      containers:
        - name: auth-server # name for a container inside this pod
          image: lauferdaniel/auth-server
          imagePullPolicy: Never
          ports:
            - containerPort: 5000 # exposing port 5000 on container inside pod
