k8s/rest-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-server-deployment
spec: 
  # number of pods for this deployment to manage
  replicas: 1 
  # select all pods with the name auth-server 
  selector:
    matchLabels:
      component: rest-api-server
      
  template: 
    metadata:
      labels:
        component: rest-api-server # label for each pod that is created

    # customize behaviour of each pod that is created
    spec:
      containers:
        - name: rest-api-server # name for a container inside this pod
          image: lauferdaniel/flashcard-app-rest-api-server
          ports:
            - containerPort: 5000 # exposing port 5000 on container inside pod
