k8s/api-gateway-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-gateway # attach to pods with this label 
  ports:
    - port: 5000 # how other containers in the cluster can connect to this one
      targetPort: 5000 # the port on the pods to forward traffic to
