k8s/front-end-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: front-end # attach to pods with this label 
  ports:
    - port: 3000 # how other containers in the cluster can connect to this one
      targetPort: 3000 # the port on the pods to forward traffic to
