k8s/rest-api-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: rest-api-server # attach to pods with this label 
  ports:
    - port: 5000 # how other containers in the cluster can connect to this one
      targetPort: 5000 # the port on the pods to forward traffic to
